don't let exceptions in slack code hit the application user
swallow and log the exception for now